2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation.

	* tests/linear/convolve.cc,
	* tests/linear/convolve_2x1d.cc,
	* tests/linear/convolve_directional.cc: Change math::round
	function to fun::v2v::round.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Set up documentation groups in Milena documentation.

	* doc/Doxyfile.in,
	* doc/Makefile.am: Handle correctly macros in symbol names.

	* doc/mln/accu/accu.dox,
	* doc/mln/canvas/canvas.dox,
	* doc/mln/core/image/concrete.dox,
	* doc/mln/core/image/domain_morpher.dox,
	* doc/mln/core/image/identity_morpher.dox,
	* doc/mln/core/image/images.dox,
	* doc/mln/core/image/morphers.dox,
	* doc/mln/core/image/value_morpher.dox,
	* doc/mln/core/neighb.dox,
	* doc/mln/data/data.dox,
	* doc/mln/io/io.dox,
	* doc/mln/main.dox,
	* doc/mln/morpho/morpho.dox: Set up documentation groups.

	* mln/accu/compute.hh,
	* mln/algebra/h_mat.hh,
	* mln/algebra/h_vec.hh,
	* mln/algebra/mat.hh,
	* mln/algebra/quat.hh,
	* mln/algebra/vec.hh,
	* mln/border/adjust.hh,
	* mln/border/duplicate.hh,
	* mln/border/equalize.hh,
	* mln/border/fill.hh,
	* mln/border/find.hh,
	* mln/border/get.hh,
	* mln/border/mirror.hh,
	* mln/border/resize.hh,
	* mln/border/resize_equal.hh,
	* mln/border/thickness.hh,
	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/breadth_first_search.hh,
	* mln/canvas/browsing/depth_first_search.hh,
	* mln/canvas/browsing/diagonal2d.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/canvas/browsing/directional.hh,
	* mln/canvas/browsing/fwd.hh,
	* mln/canvas/browsing/hyper_directional.hh,
	* mln/canvas/browsing/snake_fwd.hh,
	* mln/canvas/browsing/snake_generic.hh,
	* mln/canvas/browsing/snake_vert.hh,
	* mln/canvas/chamfer.hh,
	* mln/canvas/distance_front.hh,
	* mln/canvas/distance_geodesic.hh,
	* mln/canvas/labeling/blobs.hh,
	* mln/canvas/labeling/generic.hh,
	* mln/canvas/labeling/sorted.hh,
	* mln/canvas/labeling/video.hh,
	* mln/canvas/morpho/attribute_filter.hh,